Fix Hangul Tone Marks not to delimit in CachingWordShapeIterator

This patch includes two fixes for CachingWordShapeIterator not to
delimit Hangul Tone Marks from base characters.

The first fix is not to delmit non-CJK runs when it encounters CJK
marks.

The second fix is to exclude:
  U+302E HANGUL SINGLE DOT TONE MARK
  U+302F HANGUL DOUBLE DOT TONE MARK
from the isCJKIdeographOrSymbol set. This change makes the Hangul tone
marks consistent with other Hangul characters.

BUG=594658

Review URL: https://codereview.chromium.org/1861033003

Cr-Commit-Position: refs/heads/master@{#385475}

Former-commit-id: a7051b4065ce7dabe0e1ab758396f7e5c770d02d